--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,9 @@
 [user]
 	email = augustomp55@gmail.com
 	name = Augusto Mota Pinheiro
+[credential "https://github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
+[credential "https://gist.github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
