feat: tmux now remembers history across sessions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,9 @@ set -g mouse on
 # don't rename windows automatically
 set-option -g allow-rename off
 
+# remember history across sessions
+set -g history-file ~/.tmux_history
+
 # toggle status bar
 bind-key b set-option status
 
