--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+# set default underlying shell
+set -g default-command "/bin/bash"
+
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
@@ -14,6 +17,16 @@ bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+
+# set resizing through keys
+bind-key -r -T prefix       M-Up              resize-pane -U 5
+bind-key -r -T prefix       M-Down            resize-pane -D 5
+bind-key -r -T prefix       M-Left            resize-pane -L 5
+bind-key -r -T prefix       M-Right           resize-pane -R 5
+bind-key -r -T prefix       C-Up              resize-pane -U
+bind-key -r -T prefix       C-Down            resize-pane -D
+bind-key -r -T prefix       C-Left            resize-pane -L
+bind-key -r -T prefix       C-Right           resize-pane -R
 
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
@@ -35,11 +48,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'niksingh710/minimal-tmux-status'
 set -g @minimal-tmux-bg "#00FBB0"
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
+# get some of that fuzzy searching
+set -g @plugin 'sainnhe/tmux-fzf'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
