--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".config/nvim"]
 	path = .config/nvim
 	url = https://github.com/AugustDG/nvim-config.git
+[submodule ".tmux/plugins/minimal-tmux-status"]
+	path = .tmux/plugins/minimal-tmux-status
+	url = https://github.com/niksingh710/minimal-tmux-status
