--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,10 @@
 .fonts/
 .fzf/
 .nvm/
-.tmux/
 
 # don't ignore program-specific configurations
 !.config/nvim
+!.tmux/
 
 # don't ignore the base install script
 !install.sh
