--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,10 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+# set clipboard to system clipboard
+bind C-p run "xclip -o | tmux load-buffer - ; tmux paste-buffer"
+bind C-y run "tmux show-buffer | xclip -i -selection clipboard"
+
 # split panes using | and -
 bind | split-window -h
 bind - split-window -v
