--- a/.i3/config
+++ b/.i3/config
@@ -18,7 +18,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
-## OLD >>> exec --no-startup-id nm-applet
+exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -31,44 +31,19 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # start a terminal
-## NEW vvv
-bindsym $mod+Return exec --no-startup-id xfce4-terminal
-## NEW vvv
+bindsym $mod+Return exec --no-startup-id i3-sensible-terminal
+
+# start file manager
 bindsym $mod+e exec --no-startup-id thunar
-
-
-## NEW vvv ########################################################
-
-bindsym Print exec --no-startup-id xfce4-screenshooter
-
-# some additional xfce4-screenshooter options
-
-#   -c  Copy the screenshot to the clipboard
-#   -d  Delay in seconds before taking the screenshot
-#   -f  Take a screenshot of the entire screen
-#   -m  Display the mouse on the screenshot
-#   -o  Application to open the screenshot
-#   -r  Select a region
-#   -s  File path or directory where the screenshot will be saved
-#   -w  Take a screenshot of the active window
-
-### NEW ^^^ #######################################################
-
 
 # kill focused window
 bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-## NEW vvv
-# bindsym $mod+Shift+d exec --no-startup-id dmenu_run
-## NEW vvv
-# bindsym $mod+d exec --no-startup-id xfce4-popup-whiskermenu
+# bindsym $mod+d exec --no-startup-id dmenu_run
    
 # A more modern dmenu replacement is rofi:
 bindsym $mod+d exec "rofi run -show combi -combi-modes 'drun,run,window'"
-# There also is i3-dmenu-desktop which only displays applications shipping a
-# .desktop file. It is a wrapper around dmenu, so you need that installed.
-# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 bindsym $mod+j focus left
@@ -94,31 +69,18 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-# split in horizontal orientation
-bindsym $mod+h split h
-
-# split in vertical orientation
-bindsym $mod+v split v
-
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
-bindsym $mod+Shift+e layout toggle split
+bindsym $mod+Shift+w layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
-
-# focus the parent container
-bindsym $mod+a focus parent
-
-# focus the child container
-#bindsym $mod+d focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -161,11 +123,8 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
+
 # exit i3 (logs you out of your X session)
-
-
-## NEW vvv ###########################################################
-
 mode "Exit" {
 	bindsym l exec i3-msg exit
 	bindsym r exec systemctl -i reboot
@@ -181,8 +140,6 @@ bindsym $mod+Shift+q mode "Exit"; exec i3-nagbar \
 	-B '🌀️ [R]estart'	'systemctl -i reboot' \
 	-B '⚡️ [S]hutdown'	'systemctl -i poweroff' 
 
-## NEW ^^^ ############################################################
-
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
@@ -191,16 +148,16 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym j resize grow width 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow height 10 px or 10 ppt
+        bindsym semicolon resize shrink width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
+        bindsym Left resize grow width 10 px or 10 ppt
+        bindsym Down resize shrink height 10 px or 10 ppt
+        bindsym Up resize grow height 10 px or 10 ppt
+        bindsym Right resize shrink width 10 px or 10 ppt
 
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
@@ -210,17 +167,12 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-## NEW vvv
-	exec --no-startup-id xfce4-panel --disable-wm-check &
-## NEW vvv
-    for_window [ class="Xfce4-panel" instance="xfce4-panel" ] floating enable
+# status bar
+bar {
+        status_command i3status
+}
 
-## NEW vvv
-	exec --no-startup-id dunst & # notifications
+# notifications
+exec --no-startup-id dunst & # notifications
   
-## NEW vvv
-	exec --no-startup-id nitrogen --restore &
-## NEW vvv (pick one or the other of the following 2 lines to set the policy kit agent) 
-	#exec --no-startup-id /usr/libexec/xfce-polkit & # works with xfce 4.16
-	exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1 & # works with Ubuntu LTS / 20.04
-
+# exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1 & # works with Ubuntu LTS / 20.04
