--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,10 +6,6 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-# set clipboard to system clipboard
-bind C-p run "xclip -o | tmux load-buffer - ; tmux paste-buffer"
-bind C-y run "tmux show-buffer | xclip -i -selection clipboard"
-
 # split panes using | and -
 bind | split-window -h
 bind - split-window -v
@@ -36,7 +32,7 @@ bind-key -r -T prefix       C-Right           resize-pane -R
 set -g mouse on
 
 # don't rename windows automatically
-set-option -g allow-rename off
+set-option -g allow-rename on
 
 # remember history across sessions
 set -g history-file ~/.tmux_history
@@ -54,6 +50,9 @@ set -g @minimal-tmux-bg "#00FBB0"
 
 # get some of that fuzzy searching
 set -g @plugin 'sainnhe/tmux-fzf'
+
+# configure clipboard
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
