feat: removed conflicting keybinds from tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,10 +13,10 @@ unbind '"'
 unbind %
 
 # switch panes using Alt-arrow without prefix
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+bind-key -T prefix Left select-pane -L
+bind-key -T prefix Right select-pane -R
+bind-key -T prefix Up select-pane -U
+bind-key -T prefix Down select-pane -D
 
 # set resizing through keys
 bind-key -r -T prefix       M-Up              resize-pane -U 5
