--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 .fzf.bash
 .nvidia-settings-rc
 .[Xx]*
+.ICEauthority
+.lesshst
+.dmrc
 
 # and specific customizations/installations (such as nvm)
 .fzf/
