--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@
 # and specific customizations/installations (such as nvm)
 .fzf/
 .nvm/
+.docker/
+.nvsdkm/
+.vscode-*/
 
 # don't ignore program-specific configurations
 !.config/nvim
