--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,6 +44,11 @@ bind-key b set-option status
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
+# enhanced session history
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
+
 # Theme
 set -g @plugin 'niksingh710/minimal-tmux-status'
 set -g @minimal-tmux-bg "#00FBB0"
